fix .travis.yml [skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js: node
+branches:
+  only:
+    - master
+    - deploy
 script:
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "Travis CI"
